Closed Bug 1446699 Opened 6 years ago Closed 5 years ago

signal name 'selection_changed' is invalid

Categories

(Core :: Disability Access APIs, defect, P3)

52 Branch
All
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: tomasz.warniello, Assigned: jdiggs)

References

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0
Build ID: 20180314232927

Steps to reproduce:

Nothing in particular. 


Actual results:

My syslog is full of this entry:

/build/glib2.0-B1uXKV/glib2.0-2.50.3/./gobject/gsignal.c:3492: signal name 'selection_changed' is invalid for instance '0x7f043f11ba60' of type 'MaiAtkType139'

The count goes in thousands a day.

Linux uuuuu 4.9.0-6-amd64 #1 SMP Debian 4.9.82-1+deb9u3 (2018-03-02) x86_64 GNU/Linux

Firefox-ESR 52.7.1 (64-bit)


Expected results:

The log should be clean.
Now I see this is connected to the activity of text selection in the browser. There is more than one log entry for each character selected, so it seems. Eg. selecting one character produces three log entries. But selecting 7 characters produces only 12 entries. The entries are all the same.
Hi Tomasz,

Can you clarify on the Steps to Reproduce? Would that be the information in Comment 1?
Component: Untriaged → WebRTC: Signaling
Flags: needinfo?(tomasz.warniello)
Product: Firefox → Core
Component: WebRTC: Signaling → Selection
Yes, the description is in the first comment.
Flags: needinfo?(tomasz.warniello)
[Triage 2018/03/23 - P3]
Priority: -- → P3
I'm seeing this too, on Firefox 60.2.2 as packaged by Debian (60.2.2esr-1~deb9u1).  It's definitely annoying!

(firefox-esr:468002): GLib-GObject-WARNING **: /build/glib2.0-B1uXKV/glib2.0-2.50.3/./gobject/gsignal.c:3492: signal name 'selection_changed' is invalid for instance '0x7f51e32146f0' of type 'MaiAtkType139'
I have this issue too

(firefox:22747): GLib-GObject-WARNING **: 15:06:58.059: ../glib/gobject/gsignal.c:3492: signal name 'selection_changed' is invalid for instance '0x7fec0d7b9e20' of type 'MaiAtkType139'

It is shown every time selection changes.

I may have another issue related. While selecting firefox crashes and force closes consuming a lot of CPU
https://crash-stats.mozilla.com/report/index/2e07031d-2dd9-41f5-92f9-9bbd90181114

Linux XX4423 4.18.16-arch1-1-ARCH #1 SMP PREEMPT Sat Oct 20 22:06:45 UTC 2018 x86_64 GNU/Linux
This still reproduces on Firefox 60.3.0esr (64-bit).

Also on Firefox 60.6.1esr-1 (64-bit).

Also on Firefox 65.0.2
Linux notebook 5.0.0-arch1-1-ARCH #1 SMP PREEMPT Mon Mar 4 14:11:43 UTC 2019 x86_64 GNU/Linux

(In reply to gabriel.schanuel from comment #9)

Also on Firefox 65.0.2
Linux notebook 5.0.0-arch1-1-ARCH #1 SMP PREEMPT Mon Mar 4 14:11:43 UTC 2019 x86_64 GNU/Linux

I actually have more issues with it.
I select text for copying, every now and then firefox crashes while selecting
Firefox crashes without a crash report after selecting for a while.

I confirm the issue with latest release 66.0.3 (64-bit) on Arch linux

Moving this to Disability Access APIs because that's what ATK is.

@jamie: This console spew is pretty annoying. And it would probably be more performant to not bother attempting to emit events which are not supported on a given role. Any chance you could take a look? Thanks in advance!

Component: Selection → Disability Access APIs
Flags: needinfo?(jteh)

Marking confirmed because Joanie. :)

I'm not sure (and I haven't tested this yet), but I suspect this is because we're mapping Gecko's EVENT_TEXT_SELECTION_CHANGED to ATK selection_changed for ProxyAccessibles (content documents in content processes):
https://searchfox.org/mozilla-central/rev/ee806041c6f76cc33aa3c9869107ca87cb3de371/accessible/atk/AccessibleWrap.cpp#1344
Instead, this should be mapped to ATK text_selection_changed.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(jteh)
OS: Unspecified → Linux
Hardware: Unspecified → All
Assignee: nobody → jdiggs
Status: NEW → ASSIGNED
Comment on attachment 9070998 [details] [diff] [review]
0001-Bug-1446699-Fix-ATK-mapping-for-EVENT_TEXT_SELECTION.patch

Jamie: Thanks! That was indeed the problem. Patch attached.
Attachment #9070998 - Flags: a11y-review?(jteh)
Comment on attachment 9070998 [details] [diff] [review]
0001-Bug-1446699-Fix-ATK-mapping-for-EVENT_TEXT_SELECTION.patch

Thanks! Patch looks great, but unfortunately, old style patch reviews have been completely phased out. Patches need to be submitted to Phabricator. See https://moz-conduit.readthedocs.io/en/latest/phabricator-user.html

It looks like you're using git (rather than hg), in which case you might find [Phlay](https://github.com/mystor/phlay) easier than Arcanist/moz-phab. Aside from anything else, it is a single Python script and doesn't have any other dependencies.
Attachment #9070998 - Flags: a11y-review?(jteh)

Alternatively, I can just submit the patch myself, but it wouldn't be attributed correctly.

Oops, didn't realize about Phabricator. I have some personal appointments today, but then I'll sort out Phabricator and friends and submit the patch correctly. Thanks for the review and tips!

mozilla-inbound still alive, you can attach a patch and change its review flags, so while Phab is used quite often these days indeed, it seems you still have an option to do old days approach.

(In reply to James Teh [:Jamie] from comment #17)

Alternatively, I can just submit the patch myself, but it wouldn't be attributed correctly.

if landing the patch manually, then I believe you can use -u option to commit and set Joanie as author.

The correct mapping for nsIAccessibleEvent::EVENT_TEXT_SELECTION_CHANGED
in ATK is text_selection_changed; not selection_changed. The latter is
meant for containers which support selection of child objects, such as
a menu or expanded select element.

Comment on attachment 9071288 [details]
Bug 1446699 - Fix ATK mapping for EVENT_TEXT_SELECTION_CHANGED

Patch uploaded to/via phabriactor (in theory).

Attachment #9071288 - Flags: a11y-review?(jteh)
Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e402a0d8195e
Fix ATK mapping for EVENT_TEXT_SELECTION_CHANGED r=Jamie

Comment on attachment 9071288 [details]
Bug 1446699 - Fix ATK mapping for EVENT_TEXT_SELECTION_CHANGED

It worked. :)

Attachment #9071288 - Flags: a11y-review?(jteh)
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

This affects ESR68, should it be uplifted?

Spurious logging isn't ideal, but I'm also not sure that's a reasonable candidate for ESR uplift? The patch is low risk, FWIW.

I am running 95.0.2 and my .xsession-errors log is still flooded with the same error.. 2 years later.

signal name 'load_complete' is invalid for instance '0x7fcb46e0d230' of type 'MaiAtkType139'

Is there a work-around ?

Should have mentioned I am running Debian Sid fully up to date.

This is a slightly different error - load_complete rather than selection_changed - and will thus require a different fix. Could you please file a separate bug? Thanks.

See Also: → 1749762
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: